5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1618_2928.log
== TEST (2019-04-02 11:06:02) 
-- CODE:
mg = float (input("Digite o valor da massa do peixe grande:"))
vg = float (input("Digite a velocidade do peixe grnade:"))
mp = float (input("Digite a massa do peixe pequeno":))
vp = float (input("Digite a velocidade do peixe pequeno:")
vf = float((mg*vg)-(mp*vp))/(mg+mp)
print (vf)				
				
-- ERROR:
File "XXXX", line 3
    mp = float (input("Digite a massa do peixe pequeno":))
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:06:34) 
-- CODE:
mg = float (input("Digite o valor da massa do peixe grande:"))
vg = float (input("Digite a velocidade do peixe grande:"))
mp = float (input("Digite a massa do peixe pequeno:"))
vp = float (input("Digite a velocidade do peixe pequeno:")
vf = float((mg*vg)-(mp*vp))/(mg+mp)
print (vf)				
				
-- ERROR:
File "XXXX", line 5
    vf = float((mg*vg)-(mp*vp))/(mg+mp)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:06:51) 
-- CODE:
mg = float (input("Digite o valor da massa do peixe grande:"))
vg = float (input("Digite a velocidade do peixe grande:"))
mp = float (input("Digite a massa do peixe pequeno:"))
vp = float (input("Digite a velocidade do peixe pequeno:")
vf = ((mg*vg)-(mp*vp))/(mg+mp)
print (vf)				
				
-- ERROR:
File "XXXX", line 5
    vf = ((mg*vg)-(mp*vp))/(mg+mp)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:07:46) 
-- CODE:
mg = float (input("Digite o valor da massa do peixe grande:"))
vg = float (input("Digite a velocidade do peixe grande:"))
mp = float (input("Digite a massa do peixe pequeno:"))
vp = float (input("Digite a velocidade do peixe pequeno:")
vf = ((mg*vg)-(mp*vp))/(mg+mp)
print (vf)				
				
-- ERROR:
File "XXXX", line 5
    vf = ((mg*vg)-(mp*vp))/(mg+mp)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:07:55) 
-- CODE:
mg = float (input("Digite o valor da massa do peixe grande:"))
vg = float (input("Digite a velocidade do peixe grande:"))
mp = float (input("Digite a massa do peixe pequeno:"))
vp = float (input("Digite a velocidade do peixe pequeno:")
vf = (mg*vg)-(mp*vp)/(mg+mp)
print (vf)				
				
-- ERROR:
File "XXXX", line 5
    vf = (mg*vg)-(mp*vp)/(mg+mp)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:08:10) 
-- CODE:
mg = float (input("Digite o valor da massa do peixe grande:"))
vg = float (input("Digite a velocidade do peixe grande:"))
mp = float (input("Digite a massa do peixe pequeno:"))
vp = float (input("Digite a velocidade do peixe pequeno:")
Vf = (mg*vg)-(mp*vp)/(mg+mp)
print (vf)				
				
-- ERROR:
File "XXXX", line 5
    Vf = (mg*vg)-(mp*vp)/(mg+mp)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:08:18) 
-- CODE:
mg = float (input("Digite o valor da massa do peixe grande:"))
vg = float (input("Digite a velocidade do peixe grande:"))
mp = float (input("Digite a massa do peixe pequeno:"))
vp = float (input("Digite a velocidade do peixe pequeno:")

-- ERROR:
File "XXXX", line 5
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:08:50) 
-- CODE:
mg = float (input("Digite o valor da massa do peixe grande:"))
#vg = float (input("Digite a velocidade do peixe grande:"))
#mp = float (input("Digite a massa do peixe pequeno:"))
#vp = float (input("Digite a velocidade do peixe pequeno:")
				

-- ERROR:
File "XXXX", line 5
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:09:04) 
-- CODE:
mg = float (input("Digite o valor da massa do peixe grande:"))
vg = float (input("Digite a velocidade do peixe grande:"))
#mp = float (input("Digite a massa do peixe pequeno:"))
#vp = float (input("Digite a velocidade do peixe pequeno:")
				

-- ERROR:
File "XXXX", line 5
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:09:14) 
-- CODE:
mg = float (input("Digite o valor da massa do peixe grande:"))
vg = float (input("Digite a velocidade do peixe grande:"))
mp = float (input("Digite a massa do peixe pequeno:"))
#vp = float (input("Digite a velocidade do peixe pequeno:")
				

-- ERROR:
File "XXXX", line 5
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:09:26) 
-- CODE:
mg = float (input("Digite o valor da massa do peixe grande:"))
vg = float (input("Digite a velocidade do peixe grande:"))
mp = float (input("Digite a massa do peixe pequeno:"))
vp = float (input("Digite a velocidade do peixe pequeno:")
				

-- ERROR:
File "XXXX", line 6
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:10:28) 
-- CODE:
mg = float (input("Digite o valor da massa do peixe grande:"))
vg = float (input("Digite a velocidade do peixe grande:"))
mp = float (input("Digite a massa do peixe pequeno:"))
vp = float (input("Digite a velocidade do peixe pequeno:"))
vf = ((mg*vg)-(mp*vp))/(mg+mp)
print (vf)				

-- OUTPUT:
4.484615384615385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:10:42) 
-- CODE:
mg = float (input("Digite o valor da massa do peixe grande:"))
vg = float (input("Digite a velocidade do peixe grande:"))
mp = float (input("Digite a massa do peixe pequeno:"))
vp = float (input("Digite a velocidade do peixe pequeno:"))
vf = ((mg*vg)-(mp*vp))/(mg+mp)
print (vf)				

-- EXECUTION TIME:
0.127045
-- TEST CASE 1:
---- input:
9.8
7.6
4.5
2.3
---- correct output:
4.484615384615385
---- user output:
4.484615384615385
-- TEST CASE 2:
---- input:
1000.0
2000.0
500.0
600.0
---- correct output:
1133.3333333333333
---- user output:
1133.3333333333333
-- TEST CASE 3:
---- input:
20.0
10.0
5.0
1.0
---- correct output:
7.8
---- user output:
7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
